erDiagram
    racing_series ||--o{ racing_teams : "series_id"
    racing_teams ||--o{ racing_drivers : "team_id"
    
    racing_drivers {
        int id PK
        string first_name
        string last_name
        int racing_number
        int points
        int team_id FK
    }
    
    racing_teams {
        int id PK
        string name
        string principal_name
        string base_location
        string power_unit
        int points
        int series_id FK
        string team_color
        int wins
        int podiums
        double budget_cap
        int constructor_pos
        string chassis_model
        int graduates
        boolean is_feeder
        string energy_partner
        double battery_kwh
        int sustain_score
    }
    
    racing_series {
        int id PK
        string name
        string official_name
        string headquarters
        string governing_body
        int founded_year
        int rounds
    }
    
    flyway_schema_history {
        int installed_rank PK
        string version
        string description
        string type
        string script
        int checksum
        string installed_by
        timestamp installed_on
        int execution_time
        boolean success
    }
